--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Weather Check App"
+      name="Weather Check App 🌥"
       content="Weather App created by Juliet Wong Min, using create-react-app"
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Weather Check App</title>
+    <title>Weather Check App 🌥</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
